escalamientoDebil/slurm_error_2013_23.txt
awk: fatal: cannot open file `time10.txt' for reading: No such file or directory
awk: cmd. line:1: {print $1, $2/1.08, $2/1.08/}
awk: cmd. line:1:                             ^ syntax error
  File "/home/zbarreto/Documents/IntroHPC_MFEM/escalamientoDebil/plot.py", line 65
    output_directory = /home/zbarreto/Documents/IntroHPC_MFEM/escalamientoDebil/Gráficos/
                       ^
SyntaxError: invalid syntax
rm: cannot remove 'times*': No such file or directory
